# RDService

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  errorlogic.cpp  errorlogic.h  interfaces.h  main.cpp  rdserver.cpp  rdserver.h  session.cpp  session.h  sessionsqlmodel.cpp  sessionsqlmodel.h
app/qml/: CMakeLists.txt  MainWindow.qml  MainWindow.qml~
tests/: CMakeLists.txt  sessionsqlmodel_test.cpp
